Add k5_plugin_register_dyn internal API.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24969 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/include/Makefile.in
+++ b/src/include/Makefile.in
@@ -65,8 +65,9 @@ PROCESS_REPLACE = -e "s+@KRB5RCTMPDIR+$(KRB5RCTMPDIR)+" \
 		  -e "s+@SBINDIR+$(SBINDIR)+" \
 		  -e "s+@MODULEDIR+$(MODULE_DIR)+" \
 		  -e "s+@GSSMODULEDIR+$(GSS_MODULE_DIR)+" \
-	-e 's+@LOCALSTATEDIR+$(LOCALSTATEDIR)+' \
-	-e 's+@SYSCONFDIR+$(SYSCONFDIR)+' 
+		  -e 's+@LOCALSTATEDIR+$(LOCALSTATEDIR)+' \
+		  -e 's+@SYSCONFDIR+$(SYSCONFDIR)+' \
+		  -e 's+@DYNOBJEXT+$(DYNOBJEXT)+'
 
 OSCONFSRC = $(srcdir)/osconf.hin
 
