--- a/src/plugins/kdb/ldap/Makefile.in
+++ b/src/plugins/kdb/ldap/Makefile.in
@@ -7,7 +7,7 @@ PROG_RPATH=$(KRB5_LIBDIR)
 DEFS =
 MODULE_INSTALL_DIR = $(KRB5_DB_MODULE_DIR)
 
-SUBDIRS= libkdb_ldap ldap_util
+SUBDIRS= libkdb_ldap
 
 LOCALINCLUDES = -I../../../lib/kdb -I$(srcdir)/../../../lib/kdb \
 	-I$(srcdir)/libkdb_ldap
@@ -28,8 +28,6 @@ SHLIB_EXPDEPS = \
 SHLIB_EXPLIBS= -lkdb_ldap $(GSSRPC_LIBS) -lkrb5 -lcom_err -lk5crypto -lkrb5support $(LIBS)
 SHLIB_DIRS=-L$(TOPLIBD)
 SHLIB_RDIRS=$(KRB5_LIBDIR)
-
-$(TOPLIBD)/libkdb_ldap$(SHLIBEXT): all-recurse
 
 SRCS= 	$(srcdir)/ldap_exp.c
 
