Fix make clean in gss-kernel-lib.
List kernel_gss.c in EXTRADEPSRCS instead of SRCS so that it doesn't
get removed by "make clean" along with the copied source files.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25017 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/util/gss-kernel-lib/Makefile.in
+++ b/src/util/gss-kernel-lib/Makefile.in
@@ -15,7 +15,6 @@ SHLIB_EXPLIBS=-lgssrpc -lkrb5 -lk5crypto -lcom_err $(SUPPORT_LIB) $(LIBS)
 STOBJLISTS=OBJS.ST
 
 SRCS= \
-	kernel_gss.c \
 	k5seal.c \
 	k5sealiov.c \
 	k5unseal.c \
@@ -30,7 +29,7 @@ SRCS= \
 	util_set.c \
 	util_ordering.c
 
-EXTRADEPSRCS= t_kgss_common.c t_kgss_user.c t_kgss_kernel.c
+EXTRADEPSRCS= kernel_gss.c t_kgss_common.c t_kgss_user.c t_kgss_kernel.c
 
 OBJS= \
 	kernel_gss.o \
