--- a/src/util/profile/Makefile.in
+++ b/src/util/profile/Makefile.in
@@ -98,7 +98,7 @@ test_profile: test_profile.$(OBJEXT) argv_parse.$(OBJEXT) $(OBJS) $(DEPLIBS)
 test_vtable: test_vtable.$(OBJEXT) $(OBJS) $(DEPLIBS)
 	$(CC_LINK) -o test_vtable test_vtable.$(OBJEXT) $(OBJS) $(MLIBS)
 
-test_load: test_load.$(OBJEXT) $(SUPPORT_DEPLIB)
+test_load: test_load.$(OBJEXT) $(OBJS) $(DEPLIBS)
 	$(CC_LINK) -o test_load test_load.$(OBJEXT) $(OBJS) $(MLIBS)
 
 modtest.conf:
