Set SHLIB_RDIRS in profile test module build.
The test module has no dependencies, but SHLIB_RDIRS must be set or
the commands in shlib.conf can produce syntax errors.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25033 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/util/profile/testmod/Makefile.in
+++ b/src/util/profile/testmod/Makefile.in
@@ -10,6 +10,9 @@ LIBMAJOR=0
 LIBMINOR=0
 SO_EXT=.so
 
+# No dependencies, but we have to put something here.
+SHLIB_RDIRS=$(KRB5_LIBDIR)
+
 STOBJLISTS=OBJS.ST
 STLIBOBJS=testmod_main.o
 
