--- a/src/util/profile/testmod/Makefile.in
+++ b/src/util/profile/testmod/Makefile.in
@@ -10,9 +10,6 @@ LIBMAJOR=0
 LIBMINOR=0
 SO_EXT=.so
 
-# No dependencies, but we have to put something here.
-SHLIB_RDIRS=$(KRB5_LIBDIR)
-
 STOBJLISTS=OBJS.ST
 STLIBOBJS=testmod_main.o
 
@@ -21,5 +18,6 @@ SRCS=$(srcdir)/testmod_main.c
 check-unix:: proftest$(DYNOBJEXT)
 clean-unix:: clean-libs clean-libobjs
 
+@libnodeps_frag@
 @libnover_frag@
 @libobj_frag@
