Fix configure logic when libedit isn't present.
The configure script was correctly detecting that libedit was absent,
but was setting RL_CFLAGS to garbage in the process.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25036 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/configure.in
+++ b/src/configure.in
@@ -1116,7 +1116,8 @@ fi
 RL_CFLAGS=
 RL_LIBS=
 if test "x$with_libedit" != xno; then
-  if RL_CFLAGS=`pkg-config --cflags libedit 2>&1`; then
+  if rl_cflags=`pkg-config --cflags libedit 2>&1`; then
+    RL_CFLAGS=$rl_cflags
     RL_LIBS=`pkg-config --libs libedit`
     AC_DEFINE([HAVE_LIBEDIT], 1, [Define if building with libedit.])
     AC_MSG_RESULT([using libedit])
