Fix profile test module on Solaris.
The test module uses k5-platform.h and therefore implicitly
libkrb5support (in this case, krb5int_asprintf), so make it depend on
that.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25061 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/util/profile/testmod/Makefile.in
+++ b/src/util/profile/testmod/Makefile.in
@@ -10,6 +10,11 @@ LIBMAJOR=0
 LIBMINOR=0
 SO_EXT=.so
 
+SHLIB_DIRS=-L$(TOPLIBD)
+SHLIB_RDIRS=$(KRB5_LIBDIR)
+SHLIB_EXPLIBS=$(SUPPORT_LIB) $(LIBS)
+SHLIB_EXPDEPS=$(SUPPORT_DEPLIB)
+
 STOBJLISTS=OBJS.ST
 STLIBOBJS=testmod_main.o
 
@@ -18,6 +23,5 @@ SRCS=$(srcdir)/testmod_main.c
 check-unix:: proftest$(DYNOBJEXT)
 clean-unix:: clean-libs clean-libobjs
 
-@libnodeps_frag@
 @libnover_frag@
 @libobj_frag@
