--- a/src/util/support/Makefile.in
+++ b/src/util/support/Makefile.in
@@ -63,6 +63,7 @@ STLIBOBJS= \
 	utf8.o \
 	utf8_conv.o \
 	zap.o \
+	path.o \
 	$(IPC_ST_OBJ) \
 	$(STRLCPY_ST_OBJ) \
 	$(PRINTF_ST_OBJ) \
@@ -79,6 +80,7 @@ LIBOBJS= \
 	$(OUTPRE)utf8.$(OBJEXT) \
 	$(OUTPRE)utf8_conv.$(OBJEXT) \
 	$(OUTPRE)zap.$(OBJEXT) \
+	$(OUTPRE)path.$(OBJEXT) \
 	$(IPC_OBJ) \
 	$(STRLCPY_OBJ) \
 	$(PRINTF_OBJ) \
@@ -104,7 +106,8 @@ SRCS=\
 	$(srcdir)/mkstemp.c \
 	$(srcdir)/t_k5buf.c \
 	$(srcdir)/t_unal.c \
-	$(srcdir)/zap.c
+	$(srcdir)/zap.c \
+	$(srcdir)/path.c
 
 SHLIB_EXPDEPS =
 # Add -lm if dumping thread stats, for sqrt.
@@ -155,13 +158,27 @@ T_K5BUF_OBJS= t_k5buf.o k5buf.o $(PRINTF_ST_OBJ)
 t_k5buf: $(T_K5BUF_OBJS)
 	$(CC_LINK) -o t_k5buf $(T_K5BUF_OBJS)
 
+t_path: t_path.o path.o $(PRINTF_ST_OBJ)
+	$(CC_LINK) -o $@ t_path.o path.o $(PRINTF_ST_OBJ)
+
+t_path_win: t_path_win.o path_win.o $(PRINTF_ST_OBJ)
+	$(CC_LINK) -o $@ t_path_win.o path_win.o $(PRINTF_ST_OBJ)
+
+t_path_win.o: $(srcdir)/t_path.c
+	$(CC) $(ALL_CFLAGS) -DWINDOWS_PATHS -c $(srcdir)/t_path.c -o $@
+
+path_win.o: $(srcdir)/path.c
+	$(CC) $(ALL_CFLAGS) -DWINDOWS_PATHS -c $(srcdir)/path.c -o $@
+
 t_unal: t_unal.o
 	$(CC_LINK) -o t_unal t_unal.o
 
-TEST_PROGS= t_k5buf t_unal
+TEST_PROGS= t_k5buf t_path t_path_win t_unal
 
 check-unix:: $(TEST_PROGS)
 	./t_k5buf
+	./t_path
+	./t_path_win
 	./t_unal
 
 clean::
