Only build the po subdir if i18n is enabled.
Also clean the built message catalogs in "make clean".

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25112 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -15,7 +15,7 @@ SUBDIRS=util include lib \
 	plugins/preauth/pkinit \
 	plugins/preauth/encrypted_challenge \
 	kdc kadmin slave clients appl tests \
-	config-files gen-manpages po
+	config-files gen-manpages @po@
 WINSUBDIRS=include util lib ccapi windows clients appl
 BUILDTOP=$(REL).
 LOCALINCLUDES = -I$(srcdir) 
