Update profile.swg to remove compilation warnings. profile_tcl.c modified to remove spaces and tabs at end of line.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25114 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/util/profile/Makefile.in
+++ b/src/util/profile/Makefile.in
@@ -131,7 +131,7 @@ prof_err.o: prof_err.c
 
 # not built by default, but may be useful for testing
 $(srcdir)/profile_tcl.c: profile.swg
-#	(cd $(srcdir) && swig -tcl8 -o profile_tcl.c profile.swg)
+#	(cd $(srcdir) && swig -tcl8 -nosafe -o profile_tcl.c profile.swg)
 profile_tcl.o: $(srcdir)/profile_tcl.c profile.h
 profile_tcl: profile_tcl.o $(PROF_DEPLIB) $(COM_ERR_DEPLIB) $(SUPPORT_DEPLIB)
 	$(CC_LINK) -o profile_tcl profile_tcl.o \
