--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -378,6 +378,12 @@ SS_LIB-sys	= @SS_LIB@
 SS_LIB-k5	= $(TOPLIBD)/libss.a $(RL_LIBS)
 KDB5_LIB	= -lkdb5 $(KDB5_PLUGIN_LIBS)
 
+VERTO_DEPLIB	= $(VERTO_DEPLIB-@VERTO_VERSION@)
+VERTO_DEPLIB-sys = # empty
+VERTO_DEPLIB-k5	= $(TOPLIBD)/libverto$(DEPLIBEXT)
+VERTO_CFLAGS	= @VERTO_CFLAGS@
+VERTO_LIBS	= @VERTO_LIBS@
+
 DL_LIB		= @DL_LIB@
 
 LDAP_LIBS	= @LDAP_LIBS@
