--- a/src/tests/gssapi/Makefile.in
+++ b/src/tests/gssapi/Makefile.in
@@ -38,6 +38,5 @@ t_saslname: t_saslname.o $(GSS_DEPLIBS) $(KRB5_BASE_DEPLIBS)
 	$(CC_LINK) -o t_saslname t_saslname.o $(GSS_LIBS) $(KRB5_BASE_LIBS)
 
 clean::
-	$(RM) t_accname t_imp_cred t_imp_name t_s4u t_namingexts t_gssexts \
-		t_spnego t_saslname
-
+	$(RM) t_accname t_ccselect t_imp_cred t_imp_name t_s4u t_namingexts \
+		t_gssexts t_spnego t_saslname
